--- a/project/pages/index/index.wxml
+++ b/project/pages/index/index.wxml
@@ -4,7 +4,7 @@
     <view class="userinfo">
       <block wx:if="{{canIUseNicknameComp && !hasUserInfo}}">
         <button class="avatar-wrapper" open-type="chooseAvatar" bind:chooseavatar="onChooseAvatar">
-          <image class="avatar" src="{{userInfo.avatarUrl}}"></image>
+          <image class="avatar" src="{{avatarUrl}}"></image>
         </button>
         <view class="nickname-wrapper">
           <text class="nickname-label">昵称</text>
@@ -22,9 +22,9 @@
         <view wx:else> 请使用2.10.4及以上版本基础库 </view>
       </block>
       <block wx:else>
-        <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-        <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-        <text class="userinfo-gender">{{userInfo.gender}}</text>
+        <image bindtap="bindViewTap" class="userinfo-avatar" src="{{avatarUrl}}" mode="cover"></image>
+        <text class="userinfo-nickname">{{nickName}}</text>
+        <text class="userinfo-gender">{{gender}}</text>
       </block>
     </view>
     <view>
