--- a/project/pages/findProject/findProject.wxml
+++ b/project/pages/findProject/findProject.wxml
@@ -7,7 +7,7 @@
 
   <!-- 项目列表 -->
   <view class="projects">
-    <view class="project-item" wx:for="{{projects}}" wx:key="_id" bindtap="viewProjectDetails" data-id="{{item._id}}">
+    <view class="project-item" wx:for="{{projects}}" wx:key="_id" bindtap="viewProjectinfo" data-id="{{item._id}}">
       <text class="project-name">{{item.projectName}}</text>
       <text class="project-desc">{{item.projectIntroduction}}</text>
       <text class="project-count">参与人数: {{item.count}}</text>
