--- a/project/pages/publishPersonal/publishPersonal.wxml
+++ b/project/pages/publishPersonal/publishPersonal.wxml
@@ -1,22 +1,18 @@
 <view class="container">
   <view class="form">
-    <view class="form-item">
-      <text class="label">已有技能:</text>
-      <view class="owned-skills">
-        <block wx:for="{{skills}}" wx:key="index">
-          <text class="skill-item">{{item}}</text>
-        </block>
+    <view>
+      <view>
+        <checkbox-group bindchange="onSkillChange">
+          <block wx:for="{{skills}}" wx:key="index">
+            <label>
+              <checkbox value="{{item}}"></checkbox>
+              {{item}}
+            </label>
+          </block>
+        </checkbox-group>
       </view>
     </view>
-    
-<view class="form-item">
-  <text class="label">技能项:</text>
-    <picker mode="selector" range="{{skills}}" bindchange="onSkillChange">
-      <view class="picker">{{selectedSkill ? selectedSkill : '请选择技能项'}}</view>
-  </picker>
-</view>
 
-    
     <view class="form-item">
       <text class="label">简单说说自己吧:</text>
       <input class="input" type="text" placeholder="请输入介绍" bindinput="onSelfIntroductionInput"/>
@@ -26,7 +22,12 @@
       <text class="label">我希望的伙伴:</text>
       <input class="input" type="text" placeholder="请输入期望的伙伴" bindinput="onPartnerExpectationInput"/>
     </view>
-    
+
+    <view class="form-item">
+      <text class="label">电子邮件:</text>
+      <input class="input" type="email" placeholder="请输入你的电子邮件" bindinput="onEmailInput"/>
+    </view>
+
     <view class="form-item">
       <view class="button" bindtap="onSubmit">发布</view>
     </view>
